Fix config spacing

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -216,9 +216,9 @@ h4 {
     position: absolute;
     display: none;
     left: 5px;
-    top: 5px;
+    top: 4px;
     width: 300px;
-    height: 240px;
+    height: 235px;
     z-index: 3;
     background: #0000007e;
     backdrop-filter: blur(5px);
@@ -387,7 +387,7 @@ h4 {
     font-weight: bold;
     transition: 500ms;
     position: fixed;
-    top: 205px;
+    top: 200px;
     left: 20px;
 }
 
